--- a/quickaiweb/Web.config
+++ b/quickaiweb/Web.config
@@ -8,9 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-	
+
 	<connectionStrings>
-		<add name="mycon" connectionString="DESKTOP-3U08NL6\SQLEXPRESS;database=aaa;integrated security=true;" />
+		<add name="Cone" connectionString="Data Source=DESKTOP-6CDR2PE\SQLEXPRESS;Initial Catalog=quickai;Integrated Security=True"/>
 	</connectionStrings>
 
 	<system.web>
